--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=BancoDados/Orcamentacao_Banco.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
